--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mangodb": "^1.0.0",
     "mongoose": "^8.6.1",
-    "nodemon": "^3.1.4"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.4",
+    "validator": "^13.12.0"
   }
 }
